# learn_opengl

./: Cargo.toml  frag.glsl  light_cube_frag.glsl  light_cube_vert.glsl  lighting_frag.glsl  lighting_vert.glsl  vert.glsl
src/: main.rs
src/graphics/: camera.rs  mesh.rs  mod.rs  model.rs  shader.rs  texture.rs
